--- a/style.css
+++ b/style.css
@@ -10,12 +10,12 @@ body{
     align-items: center;
     font-family: 'Poppins'; 
     font-size: 14px;
+    background-color: #F6F4F0;
 }
 
 a {
     text-decoration: none;
-    color: #FFFFFF;
-    padding: 0 10px;    
+    color: #FFFFFF;   
 }
 
 a:hover{
@@ -28,7 +28,8 @@ a:hover{
     background-color: #2A2C2E;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
+    width: 80%;
+    max-width: 1300px;
     color: #FFFFFF;
     border-radius: 20px;
     padding: 20px 20px;
@@ -53,6 +54,14 @@ a:hover{
 .navbar{
     display: flex;
     flex-direction: row;
+    gap: 20px;
+}
+
+.cta{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
 }
 
 .banner{
@@ -139,6 +148,10 @@ img{
     font-size: 18px;
 }
 
+.lastbook:hover{
+    background-color: #f3d293;
+}
+
 .social{
     background-color: #2A2C2E;
     color: #FFFFFF;
@@ -172,7 +185,160 @@ img{
     gap: 16px;
 }
 
-@media(width <= 900px){
+.book-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80%;
+    max-width: 1300px;
+    padding: 24px;
+    background-color: #2A2C2E;
+    color: #FFFFFF;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.book-description{
+    display: flex;
+    flex-direction: row;
+    gap: 16px ;
+}
+
+.book-title{
+    font-size: 24px;
+    padding: 10px 0;
+}
+
+td{
+    padding-right: 10px;
+}
+
+.summary-reception{
+    padding-left: 80px;
+    min-width: 300px;
+    max-width: 1000px;
+}
+
+.summary{
+    background-color: #FFFFFF;
+    color: #000000;
+    border-radius: 10px;
+    padding: 12px;
+    margin-bottom: 8px;
+}
+
+.summary > p{
+    padding: 8px 0 16px 0;
+}
+
+.reception{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #FFFFFF;
+    color: #000000;
+    border-radius: 10px;
+    padding: 12px;
+}
+
+.reception a{
+    color: #000000;
+}
+
+.preview{
+    text-decoration: underline;
+    color: #000000;
+}
+
+.recommended{
+    width: 80%;
+    max-width: 1300px;
+    display: flex;
+    flex-direction: column;
+}
+
+.rec-row{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    flex-wrap: wrap;
+    margin-top: 8px;
+}
+
+.rec-card{
+    padding: 16px;
+    background-color: #FFFFFF;
+    border-radius: 8px;
+    max-width: 193px;
+}
+
+.rec-card > img{
+    width: 161px;
+    height: 248px;
+}
+
+.reviews{
+    width: 80%;
+    max-width: 1300px;
+    margin: 0 0 24px 0;
+}
+
+.rev-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 24px 0 8px 0;
+}
+
+.rev-row{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.rev-card{
+    padding: 8px;
+    background-color: #FFFFFF;
+    max-width: 640px;
+    border-radius: 12px;
+    
+}
+
+.rev-content{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.reviewer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 8px;
+}
+
+.avatar{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+}
+
+.avatar-img{
+    border-radius: 100%;
+    width: 20px;
+    height : 20px
+}
+
+
+.rev-content a{
+    color: #000000;
+    text-decoration: underline;
+}
+
+
+@media(width <= 1000px){
     .header{
         flex-direction: column;
         width: 100%;
@@ -192,6 +358,17 @@ img{
     .copyright{
         font-size: 12px;
     }
+
+    .book-container{
+        flex-wrap: wrap;
+    }
+
+    .summary-reception{
+        padding-left: 0;
+        margin-top: 20px;
+    }
 }
+
+
 
 
